--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <div id="menu">
         <!-- Menu de navegação -->
     </div>
-    <div id="main-content">
-        <p>Teste</p>
+    <div id="container" class="container">
+        <h1>Conteúdo Principal</h1>
+        <p>Este é o conteúdo principal da página.</p>
     </div>
-    <div id="rodape">
-        <!-- Rodapé -->
-    </div>
+    <footer>
+        <p>Rodapé</p>
+    </footer>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
