--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <footer>
         <p>Rodapé</p>
     </footer>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
