--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="menu">
         <!-- Menu de navegação -->
     </div>
-    <div id="container" class="container">
+    <div id="main-content" class="container">
         <h1>Conteúdo Principal</h1>
         <p>Este é o conteúdo principal da página.</p>
     </div>
