--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>teste</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/script.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -18,5 +17,6 @@
     <footer>
         <p>Rodapé</p>
     </footer>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
