--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <div id="menu">
-        <!-- Menu de navegação -->
+        <nav>
+            <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Produtos</a></li>
+            <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
     </div>
     <div id="main-content" class="container">
         <h1>Conteúdo Principal</h1>
